--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
 
     <header>
-        <div class="logo">
+        <!-- <div class="logo">
             <a href="#about">AlyssaMBP</a>
-        </div> 
+        </div>  -->
 
         <nav class="navbar">
             
