Continue working on mobile responsive view

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                  I'm an Associate Technology Specialist, currently exploring
                 a career path into UX Design and Front-End Development. 
               </p> 
+
+              <!-- <button id="fileRequest">
+                <i class='fa fa-download'>&nbsp;</i>
+                Download CV PDF
+              </button> -->
             </div>
             
             <div class="image-container">
