Experience table changes
Start applying improvements based on feedback given

--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
     </section>
 
     <section class="experience" id="experience">
-        <h2>Work Experience</h2>
+        <h2>Experience</h2>
 
         <p>
            I've had the pleasure of working with some great organisations and brilliant people around the world,
            allowing me to experience and continously improve my skills in agile processes, full stack development
            and working cross-functionally.
         </p>  
-        <div class="column-1">
+        <!-- <div class="column-1">
             <table class="table-style">
                 <tr>
                     <td>April 2022 - present</td>
@@ -113,7 +113,28 @@
                     <td>Industrial Placement Student at <strong>iSAMS by IRIS</strong></td>
                 </tr>
             </table>
-        </div>
+        </div> -->
+
+        <table>
+            <thead>
+              <tr>
+                <th scope="col">Date</th>
+                <th scope="col">Company</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td data-label="Date">April 2022 - present</td>
+                <td data-label="Company">Associate Technology Specialist at <strong>IBM</strong></td>
+              </tr>
+              <tr>
+                <td scope="row" data-label="Date">July 2019 - September 2022</td>
+                <td data-label="Company">Industrial Placement Student at <strong>iSAMS by IRIS</strong></td>
+              </tr>
+            </tbody>
+          </table>
+
+
 
     </section>
 
