images clean up

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
 
             <div class="image-container">
-              <img src="img/Profile.jpg" alt="home image">
+              <img src="img/Profile.jpg" alt="Female university graduate photo">
             </div>
               
         </div>
@@ -77,22 +77,27 @@
         <div class="skills-container" id="skills-container">
             <div class = "col">
                 <img src="img/skills/html.svg" alt="HTML icon">
-    
+                <p>HTML5</p>
             </div>
             <div class = "col">
                 <img src="img/skills/CSS.svg" alt="CSS icon">
+                <p>CSS3</p>
             </div>
             <div class = "col">
                 <img src="img/skills/javascript.svg" alt="JavaScript icon">
+                <p>JavaScript</p>
             </div>
             <div class = "col">
                 <img src="img/skills/bootstrap.svg" alt="Bootstrap icon">
+                <p>Bootstrap</p>
             </div>
             <div class = "col">
                 <img src="img/skills/c-sharp.svg" alt="C# icon">
+                <p>C#</p>
             </div>
             <div class = "col">
                 <img src="img/skills/microsoft-sqlserver.svg" alt="Microsoft SQL Server icon">
+                <p>Microsoft SQL Server</p>
             </div>
 
         </div>
@@ -106,23 +111,13 @@
            allowing me to experience and continously improve my skills in agile processes, full stack development
            and working cross-functionally.
         </p>  
-        <!-- <div class="column-1">
-            <table class="table-style">
-                <tr>
-                    <td>April 2022 - present</td>
-                    <td>Associate Technology Specialist at <strong>IBM</strong></td>
-                </tr>
-                <tr>
-                    <td>July 2019 - September 2020</td>
-                    <td>Industrial Placement Student at <strong>iSAMS by IRIS</strong></td>
-                </tr>
-            </table>
-        </div> -->
+
 
         <table>
             <thead>
               <tr>
-                <th scope="col">Date</th>
+                <!-- Scope attribute: Specify that the two header cells are headers for columns: -->
+                <th scope="col">Date</th> 
                 <th scope="col">Company</th>
               </tr>
             </thead>
@@ -132,11 +127,11 @@
                 <td data-label="Company">Associate Technology Specialist at <strong>IBM</strong></td>
               </tr>
               <tr>
-                <td scope="row" data-label="Date">July 2019 - September 2022</td>
+                <td class="row" data-label="Date">July 2019 - September 2022</td>
                 <td data-label="Company">Placement Student at <strong>iSAMS by IRIS</strong></td>
               </tr>
             </tbody>
-          </table>
+        </table>
 
 
 
