Contact form adjusted
Additionally fixed the contact form & hamburger issue

--- a/index.html
+++ b/index.html
@@ -158,13 +158,29 @@
     <section class="contact" id="contact">
 		<div class="contact-box">
 			<div class="left"></div>
-			<div class="right">
+			<!-- <div class="right">
 				<h2>Get in touch!</h2>
 				<input type="text" class="field" placeholder="Your Name">
 				<input type="text" class="field" placeholder="Your Email">
 				<textarea placeholder="Message" class="field"></textarea>
 				<button class="btn">Send</button>
-			</div>
+			</div> -->
+
+      <div class="right" >
+        <form action="">
+          <label for="name">Name:</label>
+          <input type="text" id="name" placeholder="Name">
+
+          <label for="email">Email:</label>
+          <input type="text" id="email" placeholder="Email">
+
+          <label for="message">Message:</label>
+          <textarea name="message" id="messge" placeholder="Write your message here..."></textarea>
+
+          <input type="submit" value="Submit">
+
+        </form>
+      </div>
 		</div>
     </section>
     
