Social media icons updated

--- a/index.html
+++ b/index.html
@@ -50,20 +50,14 @@
             path into UX Design and Front-End Development.
           </p>
 
-          <!-- <div class="social-links" id="social-links">
-                <a class="fa fa-linkedin fa-lg" aria-hidden="true"
-                  href="https://www.linkedin.com/in/alyssa-pagulayan/">
-                </a>
-                <a class="fa fa-github fa-lg" aria-hidden="true"
-                  href="https://github.com/alyssambp">
-                </a>
-              </div> -->
         </div>
 
         <div class="image-container">
           <img src="img/Profile.jpg" alt="Female university graduate photo" />
         </div>
       </div>
+
+      
     </section>
 
     <section class="skills" id="skills">
@@ -185,14 +179,14 @@
     </section>
 
     <footer>
-      <!-- <div class="social-links" id="social-links">
-            <a class="fa fa-linkedin fa-lg" aria-hidden="true"
+      <div class="social-links" id="social-links">
+          <a class="fa fa-linkedin fa-lg"
               href="https://www.linkedin.com/in/alyssa-pagulayan/">
-            </a>
-            <a class="fa fa-github fa-lg" aria-hidden="true"
+          </a>
+          <a class="fa fa-github fa-lg"
               href="https://github.com/alyssambp">
-            </a>
-        </div> -->
+          </a>
+      </div> 
 
       <p id="Copyright">&copy;2022</p>
     </footer>
